# Ticket-System-2024

./: CMakeLists.txt  clear.sh  judger.py
code/My_Stl/: vector.hpp
code/src/: main.cpp  order.cpp  order.hpp  train.cpp  train.hpp  user.cpp  user.hpp
code/tools/: BPTree.hpp  LinerMemory.h  MyTools.cpp  MyTools.hpp
codes/My_Stl/: map.hpp
codes/src/: main.cpp  order.cpp  order.hpp  timer.hpp  train.cpp  train.hpp  user.cpp  user.hpp
codes/tools/: BPTree.hpp  MyTools.cpp  MyTools.hpp
docs/: management_system.md
